--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,31 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<%= foundation_devise_error_messages! %>
+<div class="row">
+  <div class="medium-6 medium-centered columns">
+    <div class="login-box">
+      <div class="row">
+        <div class="large-12 columns">
+          <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+            <div class="row">
+              <h5 class="text-center">
+                <%= t('.sign_up', :default => "Sign up") %>
+              </h5>
+            </div>
+            <div class="row">
+              <%= f.email_field :email, autofocus: true, class: "large-12 columns", placeholder: "Email"%>
+            </div>
+            <div class="row">
+              <%= f.password_field :password, autocomplete: "off", class: "large-12 columns", placeholder: "Password"%>
+            </div>
+            <div class="row">
+              <%= f.password_field :password_confirmation, autocomplete: "off", class: "large-12 columns", placeholder: "Password Confirmation"%>
+            </div>
+            <div class="row">
+              <%= f.submit t('.sign_up', :default => "Sign up"), class: "button expand large-12 large-centered columns" %>
+            </div>
+          <% end %>
+        </div>
+        <%= render "devise/shared/links" %>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
