Trying out auth0

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<section class="jumbotron text-center">
+  <h2><img class="jumbo-thumbnail" src="/favicon.ico"></h2>
+  <h2>The next step in your game!</h2>
+  <a class="btn btn-success btn-lg" href="/auth/auth0">Login</a>
+</section>
+
