Working on styling

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,13 @@
-<section class="jumbotron text-center">
-  <h2><img class="jumbo-thumbnail" src="/favicon.ico"></h2>
-  <h2>The next step in your game!</h2>
-  <a class="btn btn-success btn-lg" href="/auth/auth0">Login</a>
-</section>
+<% if !current_user %>
+  <section class="jumbotron text-center">
+    <h2 style="color:whitesmoke">The next step in your game!</h2>
+    <h4><a style="color:whitesmoke" class="btn btn-success btn-lg" href="/auth/auth0">Login</a></h4>
+  </section>
+<% else %>
+    <section class="jumbotron text-center">
+        <h3>Welcome - <%= current_user.inspect %></h3>
+    </section>
+
+
+<% end %>
 
