--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,8 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
+ *= require dataTables/jquery.dataTables.foundation
+ *= require dataTables/jquery.dataTables
  *= require_self
  *= require foundation_and_overrides
  *= require devise_foundation_views_scss
