--- a/app/views/home/_matches_list.html.erb
+++ b/app/views/home/_matches_list.html.erb
@@ -1,4 +1,4 @@
-<table id="data-datatables">
+<table id="data-datatables" class="large-12 large-centered medium-12 medium-centered">
   <thead>
   <tr>
     <th>
