--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,10 @@
   <section class="jumbotron text-center">
     <h4 style="color:whitesmoke">The next step in your game!</h4>
   </section>
-  <section>
+  <section class="row">
+    <%= render 'actions' %>
+  </section>
+  <section class="row">
     <%= render 'matches_list' %>
   </section>
 <% end %>
