--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,26 +1,32 @@
 <form>
 <div class="row">
-  <div class="small-8">
+  <div class="small-8 match-details" id="<%= @match.id %>">
     <fieldset>
       <label class="match-label">Opponent
-        <input type="text" disabled="true" name="opponent" value="<%= @match.opponent.name %>"/>
+        <input class="opponent" type="text" disabled="true" name="opponent" value="<%= @match.opponent.name %>"/>
       </label>
     </fieldset>
     <fieldset>
-      <label class="match-label">Result <%= @match.match_detail.result.win ? '- WIN' : '- LOSS' %>
-        <input type="text" disabled="true" name="opponent" value="<%= @match.match_detail.result.show_sets %>"/>
+      <label class="match-label results">Result <%= @match.match_detail.result.win ? '- WIN' : '- LOSS' %>
+        <input type="text" disabled="true" name="result" value="<%= @match.match_detail.result.show_sets %>"/>
       </label>
     </fieldset>
     <fieldset>
       <label class="match-label">Strengths
-        <input type="text" disabled="true" name="opponent" value="<%= @match.match_detail.show_strengths %>"/>
+        <input class="strengths" type="text" disabled="true" name="strengths" value="<%= @match.match_detail.show_strengths %>"/>
       </label>
     </fieldset>
     <fieldset>
       <label class="match-label">Weaknesses
-        <input type="text" disabled="true" name="opponent" value="<%= @match.match_detail.show_weaknesses %>"/>
+        <input class="weaknesses" type="text" disabled="true" name="weaknesses" value="<%= @match.match_detail.show_weaknesses %>"/>
+      </label>
+    </fieldset>
+    <fieldset>
+      <label class="match-label">Notes to Self
+        <input class="note_to_self" type="text" rows="4" disabled="true" name="note_to_self" value="<%= @match.match_detail.note_to_self %>"/>
       </label>
     </fieldset>
   </div>
 </div>
 </form>
+<div id="form-modal" class="reveal-modal medium" style="display: none"></div>
