--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -29,4 +29,4 @@
   </div>
 </div>
 </form>
-<div id="form-modal" class="reveal-modal medium" style="display: none"></div>
+<div id="form-modal" class="reveal-modal medium" data-reveal style="display: none"></div>
