--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -12,18 +12,18 @@
       </label>
     </fieldset>
     <fieldset>
-      <label class="match-label">Strengths
-        <input class="strengths" type="text" disabled="true" name="strengths" value="<%= @match.match_detail.show_strengths %>"/>
+      <label class="match-label strengths">Strengths
+        <input type="text" disabled="true" name="strengths" value="<%= @match.match_detail.show_strengths %>"/>
       </label>
     </fieldset>
     <fieldset>
-      <label class="match-label">Weaknesses
-        <input class="weaknesses" type="text" disabled="true" name="weaknesses" value="<%= @match.match_detail.show_weaknesses %>"/>
+      <label class="match-label weaknesses">Weaknesses
+        <input type="text" disabled="true" name="weaknesses" value="<%= @match.match_detail.show_weaknesses %>"/>
       </label>
     </fieldset>
     <fieldset>
-      <label class="match-label">Notes to Self
-        <input class="note_to_self" type="text" rows="4" disabled="true" name="note_to_self" value="<%= @match.match_detail.note_to_self %>"/>
+      <label class="match-label note_to_self">Notes to Self
+        <input type="text" rows="4" disabled="true" name="note_to_self" value="<%= @match.match_detail.note_to_self %>"/>
       </label>
     </fieldset>
   </div>
