--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,11 +10,15 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require dataTables/jquery.dataTables.foundation
- *= require dataTables/jquery.dataTables
- *= require_self
- *= require foundation_and_overrides
- *= require devise_foundation_views_scss
- *= require foundation-icons
- */
+
+ * require foundation_and_overrides
+
+*= require foundation
+*= require_self
+*= require devise_foundation_views_scss
+*= require foundation-icons
+*= require home
+*= require matches
+*= require dataTables.foundation
+*/
+
