working on having top nav menu and new foundation styling

--- a/app/assets/stylesheets/matches.scss
+++ b/app/assets/stylesheets/matches.scss
@@ -6,6 +6,10 @@
   color: white;
 }
 
-label {
+.matches-list .dataTables_filter label {
+  color: white;
+}
+
+.matches-list .dataTables_length label {
   color: white;
 }
