--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,10 +2,10 @@
   <section class="jumbotron text-center">
     <h4 style="color:whitesmoke">The next step in your game!</h4>
   </section>
-  <section class="row">
+  <section class="grid-x">
     <%= render 'actions' %>
   </section>
-  <section class="row">
+  <section class="">
     <%= render 'matches_list' %>
   </section>
 <% end %>
