Existing match editing now working. Will add new match button. Then profile edit.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
         </ul>
       </div>
     </div>
+    <div style="height:20px"></div>
     <%= javascript_include_tag "application" %>
     <%= yield %>
 
