--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -2,7 +2,7 @@
 <div class="grid-x grid-margin-x">
   <div class="cell small-offset-1 small-10 match-details" id="<%= @match.id %>">
     <fieldset>
-      <label class="match-label">Opponent
+      <label class="match-label opponent">Opponent
         <input class="opponent" type="text" disabled="true" name="opponent" value="<%= @match.opponent.name %>"/>
       </label>
     </fieldset>
@@ -24,6 +24,11 @@
     <fieldset>
       <label class="match-label note_to_self">Notes to Self
         <input type="text" rows="4" disabled="true" name="note_to_self" value="<%= @match.match_detail.note_to_self %>"/>
+      </label>
+    </fieldset>
+    <fieldset>
+      <label class="match-label location">Location
+        <input type="text" disabled="true" name="location" value="<%= @match.court.name + ',' + @match.court.address %>"/>
       </label>
     </fieldset>
   </div>
