--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,15 @@
   </head>
 
   <body class="background">
+    <% if current_user %>
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu" data-dropdown-menu>
           <li class="menu-text">GamePlans</li>
-          <li class="is-active" id="matches-menu-item"><a href="/home/index">Matches</a></li>
-          <li id="my-profile-menu-item"><a href="/profile">My Profile</a></li>
+          <li id="matches-menu-item"><a href="/home/index">Matches</a></li>
+          <li id="new-match-menu-item"><a href="/matches/new">Add a New Match</a></li>
+          <li id="my-profile-menu-item"><a href="/users/<%= current_user.id %>">My Profile</a></li>
+          <li id="analytics-menu-item"><a href="/analytics">Analytics</a></li>
         </ul>
       </div>
       <div class="top-bar-right">
@@ -27,6 +30,7 @@
         </ul>
       </div>
     </div>
+    <% end %>
     <div style="height:20px"></div>
     <%= javascript_include_tag "application" %>
     <%= yield %>
