Working on the match save feature

--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -7,7 +7,7 @@
         </label>
       </fieldset>
       <fieldset>
-        <label class="match-label new-results">Result</label>
+        <label class="match-label new-results">Result
           <input id="new-results" type="text" name="new-results"/>
         </label>
       </fieldset>
