--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
       </div>
       <div class="top-bar-right">
         <ul class="menu">
-          <li id="logout-menu-item"><button type="button" class="button">Logout</button></li>
+          <li id="logout-menu-item"><%= link_to('Logout', destroy_user_session_path, method: :delete) %></li>
         </ul>
       </div>
     </div>
