Working on the create user flow

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -38,7 +38,7 @@
       </fieldset>
     </div>
     <div class="cell medium-offset-2 medium-5">
-      <button class="button cell medium-offset-1 medium-4 success update-match" id="<%= @user.id%>" value="submit">Save</button>
+      <button class="button cell medium-offset-1 medium-4 success update-user" id="<%= @user.id%>" value="submit">Save</button>
       <button class="button cell medium-offset-1 medium-4 cancel cancel-update" id="<%= @user.id%>" value="submit">Back</button>
     </div>
   </div>
