Working on mobile view

--- a/app/views/home/_matches_list.html.erb
+++ b/app/views/home/_matches_list.html.erb
@@ -1,5 +1,5 @@
 <div class="grid-x grid-margin-x matches-list">
-  <div class="large-offset-1 large-10 medium-offset-1 medium-10 cell">
+  <div class="large-offset-1 large-10 medium-offset-1 medium-10 small-12 cell">
     <table id="data-datatables">
       <thead>
       <tr>
